[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/piano/Piano_manager.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/background_game_G.png" type="Texture" id=3]
[ext_resource path="res://assets/Main Menu/dad.png" type="Texture" id=4]
[ext_resource path="res://WinnerScreen.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/nm/mirror land.png" type="Texture" id=6]
[ext_resource path="res://birds.tscn" type="PackedScene" id=7]
[ext_resource path="res://bird2.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/Main Menu/snow.png" type="Texture" id=9]

[sub_resource type="Theme" id=1]
Label/colors/font_color = Color( 1, 1, 1, 1 )
Label/colors/font_color_shadow = Color( 0, 0, 0, 0 )
Label/colors/font_outline_modulate = Color( 1, 1, 1, 1 )
Label/constants/line_spacing = 3
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/fonts/font = null
Label/styles/normal = null

[sub_resource type="DynamicFont" id=2]
size = 35
font_data = ExtResource( 2 )

[node name="Piano_manager" type="Node2D"]
script = ExtResource( 1 )

[node name="BackgroundGame" type="Sprite" parent="."]
modulate = Color( 0.12549, 0.105882, 0.172549, 1 )
position = Vector2( 370, 794.25 )
scale = Vector2( 1.1669, 1.03788 )
texture = ExtResource( 3 )

[node name="BackgroundGame2" type="Sprite" parent="."]
visible = false
position = Vector2( 363.5, 778.466 )
scale = Vector2( 1.02361, 1.01749 )
texture = ExtResource( 6 )

[node name="Dad" type="Sprite" parent="."]
visible = false
position = Vector2( 348, 331 )
texture = ExtResource( 4 )

[node name="text_message" type="Label" parent="."]
visible = false
margin_left = 56.0
margin_top = 493.0
margin_right = 657.0
margin_bottom = 1088.0
theme = SubResource( 1 )
custom_colors/font_color = Color( 0.45098, 0.490196, 0.494118, 1 )
custom_fonts/font = SubResource( 2 )
text = "
\"Welcome to MirrorLand\"









Click to select the mirrored square(s)"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WinnerScreen" parent="." instance=ExtResource( 5 )]

[node name="Node2D" parent="." instance=ExtResource( 7 )]
modulate = Color( 0.443137, 0.588235, 0.705882, 1 )
position = Vector2( -247, 572 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="Node2D"]
position = Vector2( 9.49999, -3.49999 )
scale = Vector2( 7.05, 4.85 )

[node name="bird2" parent="." instance=ExtResource( 8 )]
modulate = Color( 0.392157, 0.588235, 0.74902, 1 )
position = Vector2( 112, 1048 )

[node name="bird2visibility" type="VisibilityNotifier2D" parent="bird2"]
position = Vector2( 2.5, -6.50003 )
scale = Vector2( 9.95, 7.35 )

[node name="instantiatebird1" type="Position2D" parent="."]
position = Vector2( -66, 1072 )

[node name="instantiatebird2" type="Position2D" parent="."]
position = Vector2( -40, 575 )

[node name="snowParticles" type="CPUParticles2D" parent="."]
position = Vector2( 365, -8 )
scale = Vector2( 0.909517, 0.944066 )
amount = 50
lifetime = 20.0
texture = ExtResource( 9 )
emission_shape = 2
emission_rect_extents = Vector2( 300, 1 )
gravity = Vector2( 0, 10 )
scale_amount = 0.05

[node name="BackgroundGameG2" type="Sprite" parent="."]
modulate = Color( 0.0352941, 0.0352941, 0.0352941, 0 )
position = Vector2( 355, 779 )
scale = Vector2( 1.0469, 1 )
texture = ExtResource( 3 )

[node name="BackgroundGameG3" type="Sprite" parent="."]
visible = false
position = Vector2( 355, 779 )
scale = Vector2( 1.0469, 1 )
texture = ExtResource( 3 )

[connection signal="screen_exited" from="Node2D/VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="screen_exited" from="bird2/bird2visibility" to="." method="_on_bird2visibility_screen_exited"]
